feat(DOCKERIZE): dockerize application