@@ -1,4 +1,4 @@
-FROM openjdk:8-jdk-alpine
+FROM java:8-jre
 
 MAINTAINER Laijin Lu <1@aikin.me>
 
@@ -6,4 +6,6 @@ COPY build/libs/bicyclestore-user-service.jar /app/bicyclestore-user-service.jar
 
 WORKDIR /app
 
-CMD ["java", "-jar", "-Xmx2048m", "bicyclestore-user-service.jar"]
+#CMD ["java", "-XX:+PrintGCDetails", "-XX:+PrintGCTimeStamps", "-XX:+PrintGCDateStamps", "-XX:+PrintHeapAtGC", "-verbose:gc", "-XX:+PrintGCApplicationStoppedTime", "-XX:+PrintTenuringDistribution", "-Xloggc:gc_$(date +%Y%m%d-%H%M%S).log", "-Xm1024m", "-Xms1024m","-jar", "bicyclestore-user-service.jar"]
+
+CMD java -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -verbose:gc -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime -Xloggc:gc_$(date +%Y%m%d-%H%M%S).log -jar bicyclestore-user-service.jar
